@@ -47,7 +47,7 @@ $portal_cert_file = '/usr/share/geni-ch/portal/portal-cert.pem';
 $portal_private_key_file = '/usr/share/geni-ch/portal/portal-key.pem';
 
 // set to match the current GENI CH SA
-$portal_max_slice_renewal_days = 20;
+$portal_max_slice_renewal_days = 185;
 
 //----------------------------------------------------------------------
 // Set error level to include user errors (generated by the portal).
